--- a/client/dhclient.8
+++ b/client/dhclient.8
@@ -1,4 +1,4 @@
-.\"	$Id: dhclient.8,v 1.28 2008/05/23 13:56:07 fdupont Exp $
+.\"	$Id: dhclient.8,v 1.29 2008/06/12 13:38:41 fdupont Exp $
 .\"
 .\" Copyright (c) 2004,2007-2008 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
@@ -294,7 +294,13 @@ at shutdown with the specific reason for calling the script set.
 The
 .B -1
 flag will cause dhclient to try once to get a lease.  If it fails, dhclient
-exits with exit code two.
+exits with exit code two. In DHCPv6 the
+.B -1
+flag sets the max duration of the initial exchange to
+.I timeout
+(from
+.IR dhclient.conf ,
+default sixty seconds).
 .PP
 The DHCP client normally gets its configuration information from
 .B ETCDIR/dhclient.conf,
