initial openwrt support

--- a/README
+++ b/README
@@ -318,6 +318,17 @@ Linux 2.1 and later kernels do not use SO_BINDTODEVICE or require the
 broadcast address hack, but do support multiple interfaces, using the
 Linux Packet Filter.
 
+			     LINUX: OpenWrt
+
+DHCP 4.1 has been tested on OpenWrt 7.09.  In keeping with standard
+practice, client/scripts now includes a dhclient-script file for OpenWrt.
+However, this is not sufficient by itself to run dhcp on OpenWrt; a full
+package of OpenWrt-specific port files is available at 
+ftp://ftp.isc.org/isc/dhcp/dhcp-4.1.0rc1-openwrt.tar.gz
+
+This section will self-destruct when the dhcp-4.1 package is accepted by
+the OpenWrt project.
+
 		    LINUX: 802.1q VLAN INTERFACES
 
 If you're using 802.1q vlan interfaces on Linux, it is necessary to
