Update documentation to refer to omshell(1)

--- a/omapip/omapi.3
+++ b/omapip/omapi.3
@@ -239,7 +239,7 @@ dhcpctl_new_authenticator must be given as the last (the 4th) argument
 to the call to dhcpctl_connect(). All messages will then be signed
 with the given secret string using the specified algorithm.
 .SH SEE ALSO
-dhcpctl(3), omapi(3), dhcpd(8), dhclient(8), dhcpd.conf(5), dhclient.conf(5).
+dhcpctl(3), omshell(1), dhcpd(8), dhclient(8), dhcpd.conf(5), dhclient.conf(5).
 .SH AUTHOR
 .B omapi
 was created by Ted Lemon of Nominum, Inc.  Information about Nominum
