Update documentation to refer to omshell(1)

--- a/dhcpctl/dhcpctl.3
+++ b/dhcpctl/dhcpctl.3
@@ -2,7 +2,7 @@
 .\"
 .\" Project:      DHCP
 .\" File:         dhcpctl.3
-.\" RCSId:        $Id: dhcpctl.3,v 1.5 2005/03/17 20:15:03 dhankins Exp $
+.\" RCSId:        $Id: dhcpctl.3,v 1.6 2008/11/19 01:25:13 sar Exp $
 .\" 
 .\" Copyright (c) 2004 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2000-2003 by Internet Software Consortium
@@ -481,7 +481,7 @@ int main (int argc, char **argv) {
 }
 .Ed
 .Sh SEE ALSO
-omapi(3), omshell(3), dhcpd(8), dhclient(8), dhcpd.conf(5), dhclient.conf(5).
+omapi(3), omshell(1), dhcpd(8), dhclient(8), dhcpd.conf(5), dhclient.conf(5).
 .Sh AUTHOR
 .Em dhcpctl
 was written by Ted Lemon of Nominum, Inc.
