Minor grammar fix. Reported in bugs ticket #18084.

--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhcp-options.5,v 1.42 2008/02/05 16:55:50 dhankins Exp $
+.\"	$Id: dhcp-options.5,v 1.43 2008/11/21 13:59:56 jreed Exp $
 .\"
 .\" Copyright (c) 2004-2008 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
@@ -89,7 +89,7 @@ option root-path "10.0.1.4:/var/tmp/rootfs";
 .PP
 The
 .B domain-name
-data type specifies a domain name, which must not
+data type specifies a domain name, which must not be
 enclosed in double quotes.   This data type is not used for any
 existing DHCP options.   The domain name is stored just as if it were
 a text option.
