--- a/README
+++ b/README
@@ -134,7 +134,7 @@ the tar utility and the gzip command - type something like:
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.0.1b1 subdirectory that you've just created and
+Now, cd to the dhcp-4.0.1rc1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
