--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			    Version 3.1.2rc1
-			    December 1, 2008
+			      Version 3.1.2
+			    December 23, 2008
 
 			      README FILE
 
@@ -133,12 +133,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-3.1.2rc1.tar.gz
-	tar xvf dhcp-3.1.2rc1.tar
+	gunzip dhcp-3.1.2.tar.gz
+	tar xvf dhcp-3.1.2.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-3.1.2rc1 subdirectory that you've just created and
+Now, cd to the dhcp-3.1.2 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
