--- a/server/dhcpd.leases.5
+++ b/server/dhcpd.leases.5
@@ -28,7 +28,7 @@
 .\" see ``http://www.vix.com''.   To learn more about Nominum, Inc., see
 .\" ``http://www.nominum.com''.
 .\"
-.\" $Id: dhcpd.leases.5,v 1.12 2008/11/20 15:18:28 jreed Exp $
+.\" $Id: dhcpd.leases.5,v 1.12.8.1 2009/01/22 21:23:49 dhankins Exp $
 .\"
 .TH dhcpd.leases 5
 .SH NAME
@@ -107,7 +107,10 @@ the lease expiry time that the peer has acknowledged.
 The \fBatsfp\fR statement is the actual time sent from the failover
 partner.
 The \fBcltt\fR statement is the client's last transaction time.
-The \fIdate\fR is specified as follows:
+.PP
+The \fIdate\fR is specified in two ways, depending on the configuration
+value for the \fBdb-time-format\fR parameter.  If it was set to \fIdefault\fR,
+then the \fIdate\fR fields appear as follows:
 .PP
 .I weekday year\fB/\fImonth\fB/\fIday hour\fB:\fIminute\fB:\fIsecond\fR
 .PP
@@ -126,6 +129,18 @@ the local time zone.  There is probably nowhere in the world where the
 times recorded on a lease are always the same as wall clock times.  On
 most unix machines, you can display the current time in UTC by typing
 \fBdate -u\fR.
+.PP
+If the \fBdb-time-format\fR was configured to \fIlocal\fR, then
+the \fIdate\fR fields appear as follows:
+.PP
+ \fBepoch\fR \fI<seconds-since-epoch>\fR\fB; #\fR \fI<day-name> <month-name>
+<day-number> <hours>\fR\fB:\fR\fI<minutes>\fR\fB:\fR\fI<seconds> <year>\fR
+.PP
+The \fIseconds-since-epoch\fR is as according to the system's local clock (often
+referred to as "unix time").  The \fB#\fR symbol supplies a comment that
+describes what actual time this is as according to the system's configured
+timezone, at the time the value was written.  It is provided only for human
+inspection.
 .PP
 If a lease will never expire, \fIdate\fR is \fBnever\fR instead of an
 actual date.
